force-app/main/default/objects/Material_Number__c/Material_Number__c.object-meta.xml
<CustomObject>
    <label>Material Number</label>
    <nameField>
        <label>Material Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Number</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>