force-app/main/default/objects/Material_Number__c/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <externalId>true</externalId>
    <label>ERP ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>