force-app/main/default/objects/Material_Number__c/fields/Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Material_Status__c</fullName>
    <label>Material Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>