force-app/main/default/objects/Material_Number__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semifinished Product</fullName>
            </value>
            <value>
                <fullName>Trading Goods</fullName>
            </value>
            <value>
                <fullName>Non-stock materials</fullName>
            </value>
            <value>
                <fullName>Weir Manufactured Product</fullName>
            </value>
            <value>
                <fullName>Weir Configurable Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>HALB</fullName>
                <isActive>false</isActive>
                <label>HALB</label>
            </value>
            <value>
                <fullName>HAWA</fullName>
                <isActive>false</isActive>
                <label>HAWA</label>
            </value>
            <value>
                <fullName>NLAG</fullName>
                <isActive>false</isActive>
                <label>NLAG</label>
            </value>
            <value>
                <fullName>ZCON</fullName>
                <isActive>false</isActive>
                <label>ZCON</label>
            </value>
            <value>
                <fullName>ZWMP</fullName>
                <isActive>false</isActive>
                <label>ZWMP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>