force-app/main/default/objects/Material_Number__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Material Number</relationshipLabel>
    <relationshipName>Material_Number</relationshipName>
    <type>Lookup</type>
</CustomField>