force-app/main/default/objects/Material_Number__c/fields/Quantity_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit_Of_Measure__c</fullName>
    <label>Quantity Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%--Percentage</fullName>
            </value>
            <value>
                <fullName>%O--Per mille</fullName>
            </value>
            <value>
                <fullName>ONE--One</fullName>
            </value>
            <value>
                <fullName>D--Days</fullName>
            </value>
            <value>
                <fullName>22S--Square millimeter/second</fullName>
            </value>
            <value>
                <fullName>CMS--Centimeter/second</fullName>
            </value>
            <value>
                <fullName>000--Meter/Minute</fullName>
            </value>
            <value>
                <fullName>µL--Microliter</fullName>
            </value>
            <value>
                <fullName>µF--Microfarad</fullName>
            </value>
            <value>
                <fullName>IB--Pikofarad</fullName>
            </value>
            <value>
                <fullName>A--Ampere</fullName>
            </value>
            <value>
                <fullName>GOH--Gigaohm</fullName>
            </value>
            <value>
                <fullName>GM3--Gram/Cubic meter</fullName>
            </value>
            <value>
                <fullName>ACR--Acre</fullName>
            </value>
            <value>
                <fullName>ADH--KG/CM2 (Adhesion)</fullName>
            </value>
            <value>
                <fullName>AFS--AFS</fullName>
            </value>
            <value>
                <fullName>PAR--Workers</fullName>
            </value>
            <value>
                <fullName>KD3--Kilogram/cubic decimeter</fullName>
            </value>
            <value>
                <fullName>QML--Kilomol</fullName>
            </value>
            <value>
                <fullName>NI--Kilonewton</fullName>
            </value>
            <value>
                <fullName>MN--Meganewton</fullName>
            </value>
            <value>
                <fullName>MGO--Megohm</fullName>
            </value>
            <value>
                <fullName>MHV--Megavolt</fullName>
            </value>
            <value>
                <fullName>µA--Microampere</fullName>
            </value>
            <value>
                <fullName>BAG--Bag</fullName>
            </value>
            <value>
                <fullName>BAR--bar</fullName>
            </value>
            <value>
                <fullName>BT--Bottle</fullName>
            </value>
            <value>
                <fullName>BOX--Box</fullName>
            </value>
            <value>
                <fullName>BQK--Becquerel/kilogram</fullName>
            </value>
            <value>
                <fullName>BYT--Bytes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>