force-app/main/default/objects/Material_Number__c/fields/Third_Level_Material_Hierarchy_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Level_Material_Hierarchy_Name__c</fullName>
    <label>Product Hierarchy Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Z0002</fullName>
                <label>(AM) AFTERMARKET</label>
            </value>
            <value>
                <fullName>Z0001S0013</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OEM / SPECIALTY PUMPS</label>
            </value>
            <value>
                <fullName>Z0003</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OTHER</label>
            </value>
            <value>
                <fullName>Z0003S0012</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OTHER / COMPOSITE CERAMICS</label>
            </value>
            <value>
                <fullName>Z0003E0001</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OTHER / ELASTOMER PRODUCTS AND OTHER LININGS</label>
            </value>
            <value>
                <fullName>Z0003S0008</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OTHER / ENGINEERED SOLUTIONS</label>
            </value>
            <value>
                <fullName>Z0003HO001</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OTHER / HOSES</label>
            </value>
            <value>
                <fullName>Z0003M0001</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OTHER / MILL LINERS</label>
            </value>
            <value>
                <fullName>Z0003S0003</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OTHER / OTHER</label>
            </value>
            <value>
                <fullName>Z0003SP001</fullName>
                <isActive>false</isActive>
                <label>(N.A.) OTHER / SPOOL</label>
            </value>
            <value>
                <fullName>Z0002S0010</fullName>
                <isActive>false</isActive>
                <label>(N.A.) SPARES / MECHANICAL SEALS</label>
            </value>
            <value>
                <fullName>Z0002S0013</fullName>
                <isActive>false</isActive>
                <label>(N.A.) SPARES / SPECIALTY PUMPS</label>
            </value>
            <value>
                <fullName>Z0001S0010</fullName>
                <isActive>false</isActive>
                <label>(N.A) OEM / MECHANICAL SEALS</label>
            </value>
            <value>
                <fullName>Z0001</fullName>
                <label>(OE) OEM</label>
            </value>
            <value>
                <fullName>Z0002S0018</fullName>
                <label>AM / AIR CLASSIFIERS</label>
            </value>
            <value>
                <fullName>Z0002S0018AC000001</fullName>
                <label>AM / AIR CLASSIFIERS (3RD LVL)</label>
            </value>
            <value>
                <fullName>Z0002S0011</fullName>
                <label>AM / CENTRIFUGES</label>
            </value>
            <value>
                <fullName>Z0002S0011CE000002</fullName>
                <label>AM / CENTRIFUGES / OTHER (IE. DECANTER)</label>
            </value>
            <value>
                <fullName>Z0002S0011CE000001</fullName>
                <label>AM / CENTRIFUGES / STANDARD</label>
            </value>
            <value>
                <fullName>Z0002S0017</fullName>
                <label>AM / CONVEYERS</label>
            </value>
            <value>
                <fullName>Z0002S0017CO000003</fullName>
                <label>AM / CONVEYERS (3RD LVL)</label>
            </value>
            <value>
                <fullName>Z0002S0014</fullName>
                <label>AM / CRUSHERS</label>
            </value>
            <value>
                <fullName>Z0002S0014CR000002</fullName>
                <label>AM / CRUSHERS / ANCILLIARY</label>
            </value>
            <value>
                <fullName>Z0002S0014CR000001</fullName>
                <label>AM / CRUSHERS / CONE CRUSHERS</label>
            </value>
            <value>
                <fullName>Z0002S0014CR000007</fullName>
                <label>AM / CRUSHERS / ESCO SOURCED LINERS</label>
            </value>
            <value>
                <fullName>Z0002S0014CR000006</fullName>
                <label>AM / CRUSHERS / GYRATORY CRUSHERS</label>
            </value>
            <value>
                <fullName>Z0002S0014CR000004</fullName>
                <label>AM / CRUSHERS / HORIZONTAL CRUSHERS</label>
            </value>
            <value>
                <fullName>Z0002S0014CR000003</fullName>
                <label>AM / CRUSHERS / JAW CRUSHERS</label>
            </value>
            <value>
                <fullName>Z0002S0014CR000005</fullName>
                <label>AM / CRUSHERS / VERTICAL CRUSHERS</label>
            </value>
            <value>
                <fullName>Z0002S0004</fullName>
                <label>AM / CYCLONES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>