force-app/main/default/objects/Material_Number__c/fields/X3rd_Level_Material_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Level_Material_Hierarchy__c</fullName>
    <label>Product Hierarchy (OBSOLETE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z0001S0001PU000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0001PU000002</fullName>
            </value>
            <value>
                <fullName>Z0001S0001PU000003</fullName>
            </value>
            <value>
                <fullName>Z0001S0001PU000004</fullName>
            </value>
            <value>
                <fullName>Z0001S0001PU000005</fullName>
            </value>
            <value>
                <fullName>Z0001S0001PU000006</fullName>
            </value>
            <value>
                <fullName>Z0001S0001PU000007</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000002</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000003</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000004</fullName>
            </value>
            <value>
                <fullName>Z0001S0004CY000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0004CY000002</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000002</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000003</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000004</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000005</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000006</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000007</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000008</fullName>
            </value>
            <value>
                <fullName>Z0001S0006MW000009</fullName>
            </value>
            <value>
                <fullName>Z0001S0007SC000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0007SC000003</fullName>
            </value>
            <value>
                <fullName>Z0001S0009HP000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0009HP000002</fullName>
            </value>
            <value>
                <fullName>Z0001S0010SE000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0010SE000002</fullName>
            </value>
            <value>
                <fullName>Z0001S0011CE000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0011CE000002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>