force-app/main/default/objects/Material_Number__c/fields/X3rd_Level_Material_Hierarchy_Dummy__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Level_Material_Hierarchy_Dummy__c</fullName>
    <label>3rd Level Material Hierarchy Dummy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>