force-app/main/default/objects/Material_Number__c/fields/X3rd_Level_Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Level_Product_Hierarchy__c</fullName>
    <label>Product Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Z0001</fullName>
            </value>
            <value>
                <fullName>Z0001S0001</fullName>
            </value>
            <value>
                <fullName>Z0001S0001CP000002</fullName>
            </value>
            <value>
                <fullName>Z0001S0001CP000004</fullName>
            </value>
            <value>
                <fullName>Z0001S0001CP000006</fullName>
            </value>
            <value>
                <fullName>Z0001S0001CP000007</fullName>
            </value>
            <value>
                <fullName>Z0001S0001CP000008</fullName>
            </value>
            <value>
                <fullName>Z0001S0001CP000009</fullName>
            </value>
            <value>
                <fullName>Z0001S0001CP000010</fullName>
            </value>
            <value>
                <fullName>Z0001S0001PU000001--OEM / SLURRY PUMPS / PD PUMPS</fullName>
                <isActive>false</isActive>
                <label>Z0001S0001PU000001--OEM / SLURRY PUMPS / PD PUMPS</label>
            </value>
            <value>
                <fullName>Z0001S0001PU000002--OEM / SLURRY PUMPS / HORIZONTAL PUMPS</fullName>
                <isActive>false</isActive>
                <label>Z0001S0001PU000002--OEM / SLURRY PUMPS / HORIZONTAL PUMPS</label>
            </value>
            <value>
                <fullName>Z0001S0001PU000003--OEM / SLURRY / VERTICLE TURBINE PUMPS</fullName>
                <isActive>false</isActive>
                <label>Z0001S0001PU000003--OEM / SLURRY / VERTICLE TURBINE PUMPS</label>
            </value>
            <value>
                <fullName>Z0001S0001PU000004--OEM / SLURRY PUMPS / VERTICAL PUMPS</fullName>
                <isActive>false</isActive>
                <label>Z0001S0001PU000004--OEM / SLURRY PUMPS / VERTICAL PUMPS</label>
            </value>
            <value>
                <fullName>Z0001S0001PU000005--OEM / SLURRY PUMPS / SUBMERSIBLE PUMPS</fullName>
                <isActive>false</isActive>
                <label>Z0001S0001PU000005--OEM / SLURRY PUMPS / SUBMERSIBLE PUMPS</label>
            </value>
            <value>
                <fullName>Z0001S0001PU000006--OEM / SLURRY PUMPS / PUMP ANCILLIARIES</fullName>
                <isActive>false</isActive>
                <label>Z0001S0001PU000006--OEM / SLURRY PUMPS / PUMP ANCILLIARIES</label>
            </value>
            <value>
                <fullName>Z0001S0001PU000007--OEM / SLURRY PUMPS / OTHER PUMPS</fullName>
                <isActive>false</isActive>
                <label>Z0001S0001PU000007--OEM / SLURRY PUMPS / OTHER PUMPS</label>
            </value>
            <value>
                <fullName>Z0001S0002</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000001</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000001--OEM / VALVES / PINCH VALVES</fullName>
                <isActive>false</isActive>
                <label>Z0001S0002VA000001--OEM / VALVES / PINCH VALVES</label>
            </value>
            <value>
                <fullName>Z0001S0002VA000002--OEM / VALVES / KNIFEGATE VALVES</fullName>
                <isActive>false</isActive>
                <label>Z0001S0002VA000002--OEM / VALVES / KNIFEGATE VALVES</label>
            </value>
            <value>
                <fullName>Z0001S0002VA000003</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000003--OEM / VALVES / VALVE ANCILLIARIES</fullName>
                <isActive>false</isActive>
                <label>Z0001S0002VA000003--OEM / VALVES / VALVE ANCILLIARIES</label>
            </value>
            <value>
                <fullName>Z0001S0002VA000004</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000004--OEM / VALVES / OTHER VALVES</fullName>
                <isActive>false</isActive>
                <label>Z0001S0002VA000004--OEM / VALVES / OTHER VALVES</label>
            </value>
            <value>
                <fullName>Z0001S0002VA000005</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000006</fullName>
            </value>
            <value>
                <fullName>Z0001S0002VA000007</fullName>
            </value>
            <value>
                <fullName>Z0001S0003</fullName>
            </value>
            <value>
                <fullName>Z0001S0003OT000008</fullName>
            </value>
            <value>
                <fullName>Z0001S0003OT000009</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>