force-app/main/default/objects/Material_Number__c/fields/X3rd_Level_Product_Hierarchy_Name__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Level_Product_Hierarchy_Name__c</fullName>
    <label>Product Hierarchy Name (OBSOLETE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPOSITE CERAMIC MATERIAL</fullName>
            </value>
            <value>
                <fullName>COMPOSITE CERAMIC OTHER COMPONENTS</fullName>
            </value>
            <value>
                <fullName>COMPOSITE CERAMIC PUMP PARTS</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER LINING/OTHER ELASTOMER</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER LININGS / HANDLAY RUBBER</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER LININGS / OTHER LINERS</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER LININGS / SHEET RUBBER</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER LININGS/DRY RUB COMPOUND</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER LININGS/MOULDED PRODUCTS</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER LININGS/SWELLABLE PACKER</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER/O&amp;G OTHER ELASTOMER</fullName>
            </value>
            <value>
                <fullName>ELASTOMER&amp;OTHER/TANK&amp;EQP.INT.LINING</fullName>
            </value>
            <value>
                <fullName>ENGINEERING SERVICES</fullName>
            </value>
            <value>
                <fullName>GENERAL ENGINEERING</fullName>
            </value>
            <value>
                <fullName>HOSES</fullName>
            </value>
            <value>
                <fullName>HOSES O&amp;G</fullName>
            </value>
            <value>
                <fullName>HYDRAU-FLO FUEL VALVE SYSTEM</fullName>
            </value>
            <value>
                <fullName>JOBBING</fullName>
            </value>
            <value>
                <fullName>MILL LINERS / COMPOSITE</fullName>
            </value>
            <value>
                <fullName>MILL LINERS / METAL</fullName>
            </value>
            <value>
                <fullName>MILL LINERS / RUBBER</fullName>
            </value>
            <value>
                <fullName>OEM / AIR CLASIFIERS / AIR CLASSIFIER</fullName>
            </value>
            <value>
                <fullName>OEM / CENTRIFUGES / CENTRIFUGE</fullName>
            </value>
            <value>
                <fullName>OEM / CENTRIFUGES / OTHER CENTRIFUGE</fullName>
            </value>
            <value>
                <fullName>OEM / CONVEYERS / CONVEYER ANCILLIARIES</fullName>
            </value>
            <value>
                <fullName>OEM / CONVEYERS / CONVEYERS</fullName>
            </value>
            <value>
                <fullName>OEM / CRUSHERS / CONE CRUSHERS</fullName>
            </value>
            <value>
                <fullName>OEM / CRUSHERS / CRUSHER ANCILLIARIES</fullName>
            </value>
            <value>
                <fullName>OEM / CRUSHERS / GYRATORY CRUSHERS</fullName>
            </value>
            <value>
                <fullName>OEM / CRUSHERS / HORIZONTAL CRUSHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>