force-app/main/default/objects/Material_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Material_Description__c</columns>
    <columns>X3rd_Level_Product_Hierarchy__c</columns>
    <columns>Third_Level_Material_Hierarchy_Name__c</columns>
    <columns>Material_Type__c</columns>
    <columns>Material_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>